playlist requests working

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>VideoJS experiment</title>
+    <link href="https://vjs.zencdn.net/7.5.4/video-js.css" rel="stylesheet" />
+    <script src="https://vjs.zencdn.net/7.5.4/video.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/videojs-youtube/2.6.0/Youtube.min.js"
+      integrity="sha256-YJbYbf82My5W9mjSfNyUOnnhafQPNI/3b0wt3rFL/es="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="create-article-form">
