context and notehandling steps initialised

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>VideoJS experiment</title>
+    <link href="global.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
     <link href="https://vjs.zencdn.net/7.5.4/video-js.css" rel="stylesheet" />
     <script src="https://vjs.zencdn.net/7.5.4/video.js"></script>
     <script
