--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     ></script>
   </head>
   <body>
-    <div id="create-article-form">
+    <div id="courseBuilder">
       <!-- form -->
     </div>
     <div id="settings"></div>
