--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="../docs/screenshot2019-05-05.png" />
+    <meta property="og:title" content="ReactCoursebuilder" />
+    <meta
+      property="og:description"
+      content="A tool for taking notes and bookmarks while watching youtube courses"
+    />
     <title>VideoJS experiment</title>
     <link href="global.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
