--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="../docs/screenshot2019-05-05.png" />
+    <meta property="og:image" content="./assets/image.png" />
     <meta property="og:title" content="ReactCoursebuilder" />
     <meta
       property="og:description"
